<resources>
    <string name="app_name">JOCHICHESSAPP</string>
    <string name="lecciones">Lecciones</string>
    <string name="introduccion">Introducción</string>
    <string name="conceptos_basicos">Conceptos básicos</string>
    <string name="respuestas_a_amenazas">Respuestas a amenazas</string>
    <string name="el_ataque_doble">El ataque doble</string>
    <string name="el_ataque_descubierto">El ataque descubierto</string>
    <string name="la_clavada">La clavada</string>
    <string name="rayos_x">Rayos X</string>
    <string name="desviacion">Desviación</string>
    <string name="atraccion">Atracción</string>
    <string name="text_introduccion1">
        El Ajedrez es un juego de estrategia en el cual la táctica está siempre presente. Hay quien afirma que el ajedrez es 99% táctica, y aunque no sea cierto, si lo es que desempeña un papel importantísimo a lo largo de las partidas.
    </string>
    <string name="text_ataque_doble1">
        El ataque doble consiste en amenazar dos o más objetivos con una misma pieza. Estos pueden ser dos piezas del adversario, una pieza y un punto débil (por ejemplo: una amenaza de mate) o una pieza y jaque. Se produce con cierta frecuencia y es después de descuido, la forma más común de ganar material.\n\n
La fuerza del ataque doble radica en la dificultad de defenderse de dos amenazas al mismo tiempo, lo más probable es que se pierda material o la ventaja. Todas las piezas, desde el rey hasta el peón, son capaces de realizar un ataque doble (o múltiple en algunos casos).
    </string>
    <string name="text_ataque_doble2">
        <b>Ataque Doble 1</b>\n\n
En este diagrama podemos ver como el rey ataca al alfil y al caballo al mismo tiempo.
    </string>
    <string name="text_ataque_doble3">
        <b>Ataque Doble 2</b>\n\n
Aquí la torre está atacando al alfil y al caballo al mismo tiempo. Debido a que las torres suelen jugar por las columnas este ataque no es muy frecuente.

    </string>
    <string name="text_ataque_doble4">
        <b>Ataque Doble 3</b>\n\n
La dama, con su gran facilidad de movimiento a lo largo de las filas, columnas y diagonales, es la pieza ideal para realizar un ataque doble. Pero debido a su gran valor, sólo es eficaz si las piezas están indefensas. Aquí tenemos un ataque cuádruple (jaque y tres piezas).

    </string>
    <string name="text_ataque_doble5">
        <b>Ataque Doble 4</b>\n\n
El alfil, en este diagrama, está atacando al caballo y a la torre.


    </string>
    <string name="text_ataque_doble6">
        <b>Ataque Doble 5</b>\n\n
El caballo ataca a las dos torres. Este tipo de ataque doble, además de ser muy eficaz debido al valor del caballo, es también uno de los más temidos y difíciles de ver por los principiantes por el movimiento del caballo, que salta.


    </string>
    <string name="text_ataque_doble7">
        <b>Ataque Doble 6</b>\n\n
Podemos ver cómo el peón ataca a la torre y al caballo. Sin lugar a ninguna duda podemos considerar este ataque como el más eficaz de todos, dado el valor del peón. Y por supuesto, es el más humillante para el que lo sufre.\n\n\n


    </string>
    <string name="text_atq_desc1">
        Para distinguir, he aquí tres casos y una combinación famosa: \n\n
-	Ataque descubierto\n
-	Jaque descubierto\n
-	Jaque doble\n
-	La combinación del molino\n\n\n\n

<b>Ataque descubierto</b>\n\n
El ataque a la descubierta consiste en atacar un objetivo del contrario con una pieza que no se mueve, pero cuya acción queda libre al retirar una pieza que le esté bloqueando (obstaculizando). En la mayoría de los casos esta segunda pieza suele atacar otro objetivo, con lo que tenemos que dos piezas diferentes atacaron dos objetivos diferentes, lo que resultaba muy difícil de defender. No todas las piezas pueden participar de igual manera. Sólo tres piezas pueden participar en este ataque sin moverse: la dama, la torre y el alfil. Pero sí todas las piezas pueden participar como pieza que se mueve. Se da con mucha frecuencia en las combinaciones para ganar material.

    </string>
    <string name="text_atq_desc2">
        <b>Ataque a la descubierta 1 – Juegan blancas.</b>\n\n
En el diagrama podemos observar que, si las blancas juegan Ac3, éste atacaría la torre negra, pero a su vez se habría apartado de la columna b, y la torre blanca en b1 atacaría el caballo en b8. Es el ataque de dos piezas diferentes, el alfil y la torre, a dos objetivos diferentes y distantes entre sí. Aquí se ve la dificultad de su defensa. Las negras se tendrían que resignar a perder una de las dos piezas.


    </string>
    <string name="text_atq_desc3">
        <b>Ataque a la descubierta 2 – Juegan blancas. </b>\n\n
Jugando las blancas 1.Cc5 ataca a la dama con el caballo y amenazan mate con 2.Dxh7#, con lo que a las negras no les queda otro remedio que perder su dama y defenderse de la amenaza de mate. Aquí tenemos el ataque a una pieza y por otro lado una amenaza, en este caso, el mate.\n\n\n\n

<b>Jaque descubierto</b>\n\n
Es el ataque descubierto cuando una de las piezas le da jaque al rey. La que da jaque es la que no se mueve, la que se mueve es libre de ir a cualquier casilla y actuar con total libertad ya que se está obligado a defenderse del jaque. Si el ataque descubierto ya es peligroso, el jaque descubierto lo es más.


    </string>
    <string name="text_atq_desc4">
        <b>Jaque a la descubierta 1 – Juegan blancas. </b>\n\n
Las blancas juegan 1.Rd2+ atacando la torre con el rey y dando jaque con su torre. Las negras tienen que evitar el jaque con 1…Te6 o mover el rey y perderían su torre.


    </string>
    <string name="text_atq_desc5">
        <b>Jaque a la descubierta 2 – Juegan blancas. </b>\n\n
Las blancas juegan 1.d6+ atacando la dama con el peón y dando jaque con el alfil. Las negras tienen que evitar el jaque con 1…Df7 o mover el rey y perderían su Dama. En ambos casos estarían perdidas.\n\n\n\n

        <b>El Jaque doble</b>\n\n
Se trata de que tanto la pieza que se mueve como la que no, dan jaque al rey simultáneamente. La descubierta es la única manera de dar jaque doble. Cuando dos piezas atacan simultáneamente al rey es imposible el bloqueo o la captura. La única opción es mover el rey, si la jugada es legal. El jaque doble es tan peligroso que bastantes veces desemboca en mate.


    </string>
    <string name="text_atq_desc6">
        <b>Jaque Doble 1 – Juegan blancas. </b>\n\n
1.Cf6+ Se da jaque con la pieza que se mueve, el caballo, y también con la que no, la dama. La única opción de las negras es mover el rey 1…Rh8 2.Dh7# Aquí vemos como el jaque doble desemboca en mate.\n\n\n\n

<b>La combinación del molino</b>\n\n
Es una combinación basada en el jaque descubierto, en la cual extensa que se produce repetidamente para ir ganando tiempos o material.


    </string>
    <string name="text_atq_desc7">
        <b>Combinación del molino 1 – Juegan blancas. </b>\n\n

1.Txg7+ Rh8 2.Txf7+ (jaque descubierto) Rg8\n
3.Tg7+ Rh8 4.Txe7+ (jaque descubierto) Rg8\n
5.Tg7+ Rh8 6.Txd7+ (jaque descubierto) Rg8\n
7.Tg7+ Rh8 8.Txc7+ (jaque descubierto) Rg8\n
9.Tg7+ Rh8 10.Txb7+ (jaque descubierto) Rg8\n
11.Tg7+ Rh8 12.Ta7+ (jaque descubierto) Rg8\n
13.Txa4 con ventaja decisiva.\n\n
Aquí tenemos dos piezas: el alfil, que actúa como el eje, y la torre, que lo hace como las aspas del molino.\n\n\n

    </string>
    <string name="text_clavada1">
        Se dice de la jugada que ataca una pieza del adversario e inmoviliza total o parcialmente su movimiento debido a que detrás de ella y en línea (columna, fila o diagonal) se encuentra otra de su mismo color y de mayor valor. En una clavada intervienen tres piezas: la clavadora que es la que realiza el ataque, la clavada que es la que está en el medio (protegiendo) y la resguardada que es la que está detrás.\n\n
No todas las piezas pueden realizar una clavada, solamente la dama, la torre o el alfil (que son las que se desplazan a través de las columnas filas o diagonales) pueden hacerlo. Sin embargo, todas las piezas excepto el rey pueden ser clavadas. Para que una clavada sea eficaz la pieza resguardada tiene que ser de mayor valor que Ia clavadora o, en caso contrario, estar desprotegida, indefensa. Distinguiremos entre dos tipos de clavada:\n\n
-	<b>Clavada absoluta:</b> cuando la pieza resguardada sea el rey y clavadora y clavada tienen distinto movimiento. La pieza clavada no se puede mover porque dejaría su rey en jaque.\n
-	<b>Clavada relativa:</b> cuando la pieza resguardada no sea el rey y clavadora y clavada tienen distinto movimiento. La pieza clavada se puede mover\n\n
Dentro de éstos diremos que la clavada es parcial, tanto si la resguardada es el rey como si no, en el caso de que la clavadora y la clavada tengan el mismo movimiento. En este caso, la clavada se podrá mover a lo largo de la línea (columna, fila o diagonal). Un caso particular es cuando una pieza se encuentra clavada en dos direcciones diferentes, en este caso decimos que está clavada en cruz. En el caso de que una pieza clavada pueda defenderse creando una amenaza mayor (como por ejemplo un jaque) y capturar a la clavadora diremos que es una falsa clavada. Este caso sólo se puede dar cuando la clavada es relativa.

    </string>
    <string name="text_clavada2">
<b>Clavada 1</b>\n\n
Clavada absoluta. El caballo no se puede mover porque se quedaría el rey en jaque. Con la clavada absoluta la pieza clavada pierde todas sus funciones.

    </string>
    <string name="text_clavada3">
<b>Clavada 2</b>\n\n
Clavada relativa. La torre se puede mover, pero no es conveniente porque se capturaría la dama que es de mayor valor.

    </string>
    <string name="text_clavada4">
<b>Clavada 3</b>\n\n
A esta clavada la llamaremos parcial porque la torre aunque no se puede mover a lo largo de la fila sí puede hacerlo a lo largo de la columna.

    </string>
    <string name="text_clavada5">
<b>Clavada 4</b>\n\n
Clavada en cruz. El caballo está clavado doblemente, por un lado una clavada absoluta con el alfil y por el otro una clavada relativa con la torre.

    </string>
    <string name="text_clavada6">
<b>Clavada 5</b>\n\n
Falsa clavada. El alfil está clavado (clavada relativa), pero si el turno de juego fuera de las blancas, podrían jugar Axh7+ las negras moverían su rey y las blancas a continuación capturarían la torre negra de d7 con Dxd7.

    </string>
    <string name="text_clavada7">
<b>Clavada 6 – Mueven las negras. </b>\n\n
Aquí las negras pueden capturar la dama blanca sin que el peón pueda hacer nada al estar clavado. Este es uno de los mayores inconvenientes de la clavada: las piezas pierden movilidad y funciones.\n\n\n

    </string>
</resources>