<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LeccClavada">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_clav1"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:gravity="center"
                android:text="LA CLAVADA"
                android:textColor="#020AA7"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_clav2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_clavada1"
                android:textColor="#000"/>

            <ImageView
                android:id="@+id/iv_clav1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/clav1" />

            <TextView
                android:id="@+id/tv_clav3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_clavada2"
                android:textColor="#000"/>

            <ImageView
                android:id="@+id/iv_clav2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/clav2" />

            <TextView
                android:id="@+id/tv_clav4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_clavada3"
                android:textColor="#000"/>

            <ImageView
                android:id="@+id/iv_clav3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/clav3" />

            <TextView
                android:id="@+id/tv_clav5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_clavada4"
                android:textColor="#000"/>

            <ImageView
            android:id="@+id/iv_clav4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/clav4" />

            <TextView
                android:id="@+id/tv_clav6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_clavada5"
                android:textColor="#000"/>

            <ImageView
                android:id="@+id/iv_clav5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/clav5" />

            <TextView
                android:id="@+id/tv_clav7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_clavada6"
                android:textColor="#000"/>

            <ImageView
                android:id="@+id/iv_atq_desc6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/clav6" />

            <TextView
                android:id="@+id/tv_clav8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_clavada7"
                android:textColor="#000"/>





        </LinearLayout>

    </ScrollView>

</LinearLayout>