<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LeccAtqDesc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ataque_desc1"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:gravity="center"
                android:text="EL ATAQUE DESCUBIERTO"
                android:textColor="#020AA7"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ataque_desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_atq_desc1"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/iv_atq_desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/atq_desc1" />


            <TextView
                android:id="@+id/tv_ataque_desc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_atq_desc2"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/iv_atq_desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/atc_desc2" />

            <TextView
                android:id="@+id/tv_ataque_desc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_atq_desc3"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/iv_atq_desc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/jaq_desc1" />

            <TextView
                android:id="@+id/tv_ataque_desc5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_atq_desc4"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/iv_atq_desc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/jaq_desc2" />

            <TextView
                android:id="@+id/tv_ataque_desc6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_atq_desc5"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/iv_atq_desc5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/jaq_dob1" />

            <TextView
                android:id="@+id/tv_ataque_desc7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_atq_desc6"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/iv_atq_desc6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/comb_mol1" />

            <TextView
                android:id="@+id/tv_ataque_desc8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_atq_desc7"
                android:textColor="#000" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>